--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    Nuevo proyecto
+    Nuevo proyecto.
+
+    Este es un nuevo mensaje
 </body>
 </html>
